--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@sentry/browser": "^7.43.0",
-    "@sentry/react": "^7.45.0",
+    "@sentry/browser": "^7.52.1",
+    "@sentry/integrations": "^7.52.1",
+    "@sentry/react": "^7.52.1",
     "@sentry/tracing": "^7.45.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
