--- a/.github/workflows/sentry.yml
+++ b/.github/workflows/sentry.yml
@@ -1,15 +1,21 @@
-- uses: actions/checkout@v3
-  with:
-    fetch-depth: 0
+on: [push, pull_request]
 
-- name: Create Sentry release
-  uses: getsentry/action-release@v1.4.1
-  env:
-    SENTRY_AUTH_TOKEN: "0ac177a5a0cf41a7bc3016cac3f590f09b911107e6c145d88e32045b8e84afce"
-    SENTRY_ORG: "dragonfruit-dev"
-    SENTRY_PROJECT: "javascript-react"
-    # SENTRY_URL: https://sentry.io/
-  with:
-    environment: production
-    sourcemaps: "/build/static/"
-    version: "githubactions@1.0.0"
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Create Sentry release
+        uses: getsentry/action-release@v1.4.1
+        env:
+          SENTRY_AUTH_TOKEN: "0ac177a5a0cf41a7bc3016cac3f590f09b911107e6c145d88e32045b8e84afce"
+          SENTRY_ORG: "dragonfruit-dev"
+          SENTRY_PROJECT: "javascript-react"
+          # SENTRY_URL: https://sentry.io/
+        with:
+          environment: "production"
+          sourcemaps: "/build/static/"
+          version: "githubactions@1.0.0"
