github actions fix

--- a/.github/workflows/sentry.yml
+++ b/.github/workflows/sentry.yml
@@ -19,3 +19,4 @@ jobs:
           environment: "production"
           sourcemaps: "/build/static/"
           version: "githubactions@1.0.0"
+          debug: true
