--- a/.github/workflows/sentry.yml
+++ b/.github/workflows/sentry.yml
@@ -18,5 +18,5 @@ jobs:
           # SENTRY_URL: https://sentry.io/
         with:
           environment: "production"
-          sourcemaps: "/build/static/"
+          sourcemaps: "./build/static/"
           version: "githubactions@1.0.0"
